Add check_zpool package workflow

--- a/man/check_zpool.8
+++ b/man/check_zpool.8
@@ -1,4 +1,4 @@
-.TH check_zpool 8
+.TH check_zpool 8 "xx.yy.zz"
 .SH NAME
 Simple check-script for Cron/Zabbix/NRPE/Nagios to get the status of all zpool volumes
 .SH SYNOPSIS
@@ -29,3 +29,6 @@ a critical error has occured, data is unaccessible
 an unknown error has happened
 .Sh SEE ALSO
 .Xr zpool 8 ,
+
+.SH AUTHOR
+Søren Klintrup (github@klintrup.dk)
